# abismal

./: .clang-format  .clang-tidy  .cppcheck_suppress  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: abismal_build_macos.yml  abismal_build_ubuntu.yml  abismal_distcheck_ubuntu.yml  abismal_linux_release.yml  abismal_release_linux.yml  abismal_release_macos.yml  c-cpp.yml  macos-builds.yml  ubuntu-builds.yml  ubuntu-distcheck.yml
data/: LICENSE  LICENSES.inc.in  config.h.in  md5sum.txt
docs/: MANUAL.md  abismal.1  abismal.html
m4/: ax_openmp.m4
src/: AbismalAlign.hpp  AbismalIndex.cpp  AbismalIndex.hpp  AbismalSeed.cpp  AbismalSeed.hpp  CMakeLists.txt  GenomicRegion.cpp  GenomicRegion.hpp  Makefile  MappedRead.cpp  MappedRead.hpp  QualityScore.cpp  abismal.cpp  abismal.hpp  abismal_cigar_utils.hpp  abismal_main.cpp  abismalidx.cpp  abismalidx.hpp  abismalidx_main.cpp  bam_record_utils.cpp  bisulfite_utils.cpp  bisulfite_utils.hpp  chromosome_utils.cpp  chromosome_utils.hpp  cigar_utils.hpp  common.hpp  compress-mr.cpp  dna_four_bit.cpp  dna_four_bit.hpp  dna_four_bit_bisulfite.hpp  etc.cpp  htslib_wrapper.cpp  htslib_wrapper.hpp  kdq.h  popcnt.hpp  seedtool.cpp  sim_utils.cpp  sim_utils.hpp  simreads.cpp  simreads.hpp  (+7 more)
test_scripts/: test_abismal.test  test_abismal_pbat.test  test_abismal_pe.test  test_abismal_rpbat.test  test_abismal_threads.test  test_abismalidx.test  test_simreads.test  test_simreads_pbat.test  test_simreads_pe.test  test_simreads_rpbat.test
